--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<rest.easy.client.version>3.6.1.Final</rest.easy.client.version>
+		<jboss.rest.easy.version>2.0.1.Final</jboss.rest.easy.version>
 	</properties>
 
 	<dependencies>
@@ -44,8 +46,14 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-spring-boot-starter</artifactId>
-            <version>2.0.1.Final</version>
+            <version>${jboss.rest.easy.version}</version>
         </dependency>
+
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-client</artifactId>
+			<version>${rest.easy.client.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
